--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,7 @@ lint.select = ["E","F","I","B","W","UP"]
 # Rules to ignore:
 # E203  whitespace before ':' (Black-compatible)
 # E501  line length (Black handles line wrapping)
-lint.ignore = ["E203","E501"]
+# UP006  keep typing.List instead of converting to list (PEP 585)
+# UP007  keep typing.Dict instead of converting to dict (PEP 585)
+# UP035  keep typing.Optional instead of converting to | None (PEP 604)
+lint.ignore = ["E203","E501","UP006","UP007","UP035"]
