--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -42,7 +42,7 @@ pull_request_rules:
           - @{{ review.user.login }}
           {% endfor %}
 
-  - name: ping author on conflicts and add 'needs-rebase' label
+  - name: ping author on conflicts
     conditions:
       - "conflict"
       - "-closed"
