--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -3,6 +3,7 @@ pytest>=7.4.0
 nbformat>=5.7.0
 jupyter-client>=8.0.0
 ipython>=8.0.0
+ipykernel>=6.0.0
 
 # Optional: Enhanced reporting and utilities
 pytest-html>=3.2.0        # HTML test reports
